fix(clojure-mcp): update wrapper script and documentation based on official repo